--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "description": "Calculate the position of the sun with the goal to serve primary data for architecture design",
   "main": "src/index.html",
   "dependencies": {
-    "jquery-latitude-longitude-picker-gmaps": "^1.1.0"
+    "jquery-latitude-longitude-picker-gmaps": "1.1.0",
+    "suncalc": "1.7.0"
   },
   "devDependencies": {
     "gh-pages": "0.11.0",
+    "live-server": "1.0.0",
     "standard": "6.0.8"
   },
   "scripts": {
+    "postinstall": "mkdir -p src/js/vendor && cp node_modules/jquery-latitude-longitude-picker-gmaps/js/jquery-gmaps-latlon-picker.js src/js/vendor/ && cp node_modules/suncalc/suncalc.js src/js/vendor/",
     "start": "live-server src",
     "build": "npm run lint",
     "lint": "standard src",
